# search_engine

./: .gitignore  cluster.yml  dev-cluster.yml
backend-se/: .gitignore  README.md  index.py  pyproject.toml  requirements.txt
backend-se/backend_se/: app.py
backend-se/backend_se/services/: app.services.py  app_services.py
backend-se/backend_se/types/: elasticsearch_client.py  types.py
backend-se/config/: elasticsearch.py
backend-se/controllers/: elasticsearch.py
data_extraction/: package.json  tsconfig.json
data_extraction/data/: completedIds.json  ids.json  requestsQueue.json  searchQueries.json  searchedQueries.json
data_extraction/src/: formatData.ts  index.ts
data_extraction/src/scripts/: elasticRequests.ts  getAccessToken.ts  jsonScripts.ts  requests.ts
data_extraction/src/utils/: indexFunctions.ts  types.ts
elasticsearch_commands/: albumsMap.es  artistMap.es  mappings.es  trackMap.es
frontend-se/: .env.example  package.json
frontend-se/src/: App.tsx  main.tsx
frontend-se/src/componentes/: facets.tsx  options.tsx  results.tsx  searchBox.tsx
frontend-se/src/components/: facets.tsx  options.tsx  pagination.tsx  results.tsx  searchBox.tsx  tracks.tsx
frontend-se/src/config/: es_config.ts
frontend-se/src/config/elements/: facets.ts
frontend-se/src/context/: optionsContext.tsx
frontend-se/src/types/: types.ts
frontend-se/src/utils/: functions.ts
frontend-se/src/views/: album.tsx  index.tsx
